--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -95,9 +95,12 @@ RUN if [ -n "$CUDA_VERSION" ] ; then \
         mkdir -p /tmp/cuda-keyring && \
         wget -P /tmp/cuda-keyring https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-keyring_1.0-1_all.deb && \
         dpkg -i /tmp/cuda-keyring/cuda-keyring_1.0-1_all.deb && \
-        rm -rf /tmp/cuda-keyring && \
-        du -h --max-depth=3 ; \
+        rm -rf /tmp/cuda-keyring \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
+
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         libgomp1 \
@@ -129,7 +132,9 @@ RUN apt-get update && \
         htop && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
     du -h --max-depth=3
 
 ###############################
@@ -140,7 +145,9 @@ RUN add-apt-repository ppa:git-core/ppa && \
         git && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
     du -h --max-depth=3
 
 ##############################
@@ -151,7 +158,9 @@ RUN \
     apt-get install -y --no-install-recommends nodejs && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
     du -h --max-depth=3
 
 ################
@@ -172,11 +181,15 @@ RUN add-apt-repository ppa:deadsnakes/ppa && \
     python${PYTHON_VERSION}-venv && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/* 
+
+RUN set -eux; \
     du -h --max-depth=3
 
 RUN curl -fsSL https://bootstrap.pypa.io/get-pip.py | python${PYTHON_VERSION} - && \
-    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' setuptools && \
+    pip${PYTHON_VERSION} install --no-cache-dir --upgrade 'pip<23' setuptools
+
+RUN set -eux; \
     du -h --max-depth=3
 
 #####################
@@ -191,7 +204,9 @@ COPY pillow_stub /tmp/pillow_stub
 
 RUN pip${PYTHON_VERSION} install --no-cache-dir --upgrade /tmp/pillow_stub && \
     pip${PYTHON_VERSION} install --no-cache-dir --upgrade pillow_simd==${PILLOW_SIMD_VERSION} && \
-    rm -rf /tmp/pillow_stub && \
+    rm -rf /tmp/pillow_stub
+
+RUN set -eux; \
     du -h --max-depth=3
 
 #################
@@ -211,14 +226,15 @@ RUN if [ -z "$PYTORCH_NIGHTLY_URL" ] ; then \
       CUDA_VERSION_TAG=$(python${PYTHON_VERSION} -c "print('cu' + ''.join('${CUDA_VERSION}'.split('.')[:2]) if '${CUDA_VERSION}' else 'cpu')") && \
         pip${PYTHON_VERSION} install --no-cache-dir --find-links https://download.pytorch.org/whl/torch_stable.html \
             torch==${PYTORCH_VERSION}+${CUDA_VERSION_TAG} \
-            torchvision==${TORCHVISION_VERSION}+${CUDA_VERSION_TAG} && \
-            du -h --max-depth=3 ; \
+            torchvision==${TORCHVISION_VERSION}+${CUDA_VERSION_TAG} \
     else \
         pip${PYTHON_VERSION} install --no-cache-dir --pre --index-url ${PYTORCH_NIGHTLY_URL} \
             torch==${PYTORCH_VERSION}.${PYTORCH_NIGHTLY_VERSION} \
-	        torchvision==${TORCHVISION_VERSION}.${PYTORCH_NIGHTLY_VERSION} && \
-            du -h --max-depth=3 ; \
+	        torchvision==${TORCHVISION_VERSION}.${PYTORCH_NIGHTLY_VERSION} \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 #####################################
 # Install EFA and AWS-OFI-NCCL plugin
@@ -238,9 +254,11 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
         libhwloc-dev && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
-    du -h --max-depth=3 ; \
+    rm -rf /var/lib/apt/lists/* ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
         cd /tmp && \
@@ -249,9 +267,11 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
         cd aws-efa-installer && \
         apt-get update && \
         ./efa_installer.sh -y -g -d --skip-kmod --skip-limit-conf --no-verify && \
-        rm -rf /tmp/aws-efa-installer* && \
-        du -h --max-depth=3 ; \
+        rm -rf /tmp/aws-efa-installer* ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
         git clone https://github.com/aws/aws-ofi-nccl.git /opt/aws-ofi-nccl && \
@@ -263,9 +283,11 @@ RUN if [ -n "$AWS_OFI_NCCL_VERSION" ] ; then \
             --with-cuda=/usr/local/cuda \
             --disable-tests \
             --enable-platform-aws && \
-        make && make install && \
-        du -h --max-depth=3 ; \
+        make && make install ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 ###################################
 # Mellanox OFED driver installation
@@ -278,9 +300,11 @@ RUN if [ -n "$MOFED_VERSION" ] ; then \
         wget -nv -P /tmp/mofed http://content.mellanox.com/ofed/MLNX_OFED-${MOFED_VERSION}/MLNX_OFED_LINUX-${MOFED_VERSION}-ubuntu20.04-x86_64.tgz && \
         tar -zxvf /tmp/mofed/MLNX_OFED_LINUX-${MOFED_VERSION}-ubuntu20.04-x86_64.tgz -C /tmp/mofed && \
         /tmp/mofed/MLNX_OFED_LINUX-${MOFED_VERSION}-ubuntu20.04-x86_64/mlnxofedinstall --user-space-only --without-fw-update --force && \
-        rm -rf /tmp/mofed && \
-        du -h --max-depth=3 ; \
+        rm -rf /tmp/mofed && ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 #####################
 # Install NVIDIA Apex
@@ -298,9 +322,11 @@ RUN if [[ -n "$CUDA_VERSION" ]] &&  [[ -z "${PYTORCH_NIGHTLY_URL}" ]]; then \
             --global-option="--cuda_ext" \
             --target  /usr/local/lib/python${PYTHON_VERSION}/dist-packages \
             ./ && \
-        rm -rf /tmp/apex && \
-        du -h --max-depth=3 ; \
+        rm -rf /tmp/apex && ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 ##########################
 # Install Flash Attention
@@ -311,9 +337,11 @@ RUN if [ -n "$CUDA_VERSION" ] ; then \
         git clone --branch v2.4.2 https://github.com/Dao-AILab/flash-attention.git && \
         cd flash-attention && \
         MAX_JOBS=1 python${PYTHON_VERSION} setup.py install && \
-        cd .. && \
-        du -h --max-depth=3 ; \
+        cd .. ; \
     fi
+
+RUN set -eux; \
+    du -h --max-depth=3
 
 ###############
 # Install cmake
@@ -357,7 +385,9 @@ ENV BASH_ENV=/etc/profile
 #########################
 RUN useradd -rm -d /home/mosaicml -s /bin/bash -u 1000 -U -s /bin/bash mosaicml && \
     usermod -a -G sudo mosaicml && \
-    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
+    echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers 
+
+RUN set -eux; \
     du -h --max-depth=3
 
 #########################
@@ -367,7 +397,9 @@ RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get autoclean && \
     apt-get clean && \
-    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
     du -h --max-depth=3
 
 #########################
@@ -378,7 +410,9 @@ RUN pip install --no-cache-dir --upgrade \
         ipython${IPYTHON_VERSION} \
         urllib3${URLLIB3_VERSION} \
         python-snappy
-RUN du -h --max-depth=3
+        
+RUN set -eux; \
+    du -h --max-depth=3
 
 ##################################################
 # Override NVIDIA mistaken env var for 11.8 images
