--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -295,7 +295,7 @@ RUN if [[ -n "$CUDA_VERSION" ]] &&  [[ -z "${PYTORCH_NIGHTLY_URL}" ]]; then \
 # Install Flash Attention
 ##########################
 RUN pip install packaging==22.0 && \
-    pip install flash-attn==2.5.0
+    pip install flash-attn==2.5.0 --no-build-isolation
 
 ###############
 # Install cmake
