--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -294,8 +294,14 @@ RUN if [[ -n "$CUDA_VERSION" ]] &&  [[ -z "${PYTORCH_NIGHTLY_URL}" ]]; then \
 ##########################
 # Install Flash Attention
 ##########################
-RUN pip install packaging==22.0
-RUN pip install flash-attn==2.3.6 --no-build-isolation
+RUN if [ -n "$CUDA_VERSION" ] ; then \
+        pip${PYTHON_VERSION} install --upgrade --no-cache-dir ninja==1.11.1 && \
+        pip${PYTHON_VERSION} install --upgrade --no-cache-dir --force-reinstall packaging==22.0 && \
+        git clone --branch v2.4.2 https://github.com/Dao-AILab/flash-attention.git && \
+        cd flash-attention && \
+        MAX_JOBS=2 python${PYTHON_VERSION} setup.py install && \
+        cd .. ; \
+    fi
 
 ###############
 # Install cmake
