--- a/.github/workflows/docker-configure-build-push.yaml
+++ b/.github/workflows/docker-configure-build-push.yaml
@@ -36,6 +36,7 @@ on:
         required: true
 jobs:
   configure-build-push:
+    timeout-minutes: 1440
     runs-on: ubuntu-latest
     steps:
       - name: Maximize Build Space on Worker
