--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,7 +1,7 @@
 yaml-files:
-  - "*.yaml"
-  - "*.yml"
-  - .yamllint
+- "*.yaml"
+- "*.yml"
+- .yamllint
 
 ignore: |
   wandb
@@ -14,8 +14,7 @@ rules:
     forbid: false
   colons: enable
   commas: enable
-  comments:
-    level: warning
+  comments: enable
   comments-indentation: enable
   document-end:
     present: false
@@ -26,12 +25,11 @@ rules:
   hyphens: enable
   indentation:
     spaces: 2
-    indent-sequences: true
+    indent-sequences: false
     check-multi-line-strings: false
   key-duplicates: enable
   key-ordering: disable
   line-length:
-    max: 200
     allow-non-breakable-words: true
     allow-non-breakable-inline-mappings: true
   new-line-at-end-of-file: enable
