--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ reportUnusedCoroutine = "error"
 # Pytest
 [tool.pytest.ini_options]
 # By default, do not run gpu, vision, docs, notebook, or daily tests
-addopts = "--codeblocks --strict-markers -m 'not gpu and and not doctest and not daily and not remote'"
+addopts = "--codeblocks --strict-markers -m 'not gpu and not doctest and not daily and not remote'"
 
 markers = [
     # Tests that require a world_size of two should be annotated with `@pytest.mark.world_size(2)`.
