--- a/.github/workflows/pr-gpu.yaml
+++ b/.github/workflows/pr-gpu.yaml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       matrix:
         include:
-        - name: "gpu-3.10-2.1"
+        - name: gpu-3.10-2.1
           container: mosaicml/pytorch:2.1.0_cu121-python3.10-ubuntu20.04
-          markers: "not daily and not remote and gpu and (doctest or not doctest)"
-          pytest_command: "coverage run -m pytest"
-          composer_package_name: "mosaicml"
+          markers: not daily and not remote and gpu and (doctest or not doctest)
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
     name: ${{ matrix.name }}
     if: github.repository_owner == 'mosaicml'
     with:
