--- a/.github/workflows/pr-cpu.yaml
+++ b/.github/workflows/pr-cpu.yaml
@@ -13,31 +13,31 @@ jobs:
     strategy:
       matrix:
         include:
-        - name: 'cpu-3.10-1.13'
+        - name: cpu-3.10-1.13
           container: mosaicml/pytorch:1.13.1_cpu-python3.10-ubuntu20.04
-          markers: 'not daily and not remote and not gpu and not doctest'
-          pytest_command: 'coverage run -m pytest'
-          composer_package_name: 'mosaicml'
-        - name: 'cpu-3.10-2.0'
+          markers: not daily and not remote and not gpu and not doctest
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+        - name: cpu-3.10-2.0
           container: mosaicml/pytorch:2.0.1_cpu-python3.10-ubuntu20.04
-          markers: 'not daily and not remote and not gpu and not doctest'
-          pytest_command: 'coverage run -m pytest'
-          composer_package_name: 'mosaicml'
-        - name: 'cpu-3.10-2.1'
+          markers: not daily and not remote and not gpu and not doctest
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+        - name: cpu-3.10-2.1
           container: mosaicml/pytorch:2.1.0_cpu-python3.10-ubuntu20.04
-          markers: 'not daily and not remote and not gpu and not doctest'
-          pytest_command: 'coverage run -m pytest'
-          composer_package_name: 'mosaicml'
-        # - name: 'cpu-3.10-2.2'
+          markers: not daily and not remote and not gpu and not doctest
+          pytest_command: coverage run -m pytest
+          composer_package_name: mosaicml
+        # - name: cpu-3.10-2.2
         #   container: mosaicml/pytorch:2.2.0_cu121-nightly20231213-python3.10-ubuntu20.04
-        #   markers: 'not daily and not remote and not gpu and not doctest'
-        #   pytest_command: 'coverage run -m pytest'
-        #   composer_package_name: 'mosaicml'
-        - name: 'cpu-doctest'
+        #   markers: not daily and not remote and not gpu and not doctest
+        #   pytest_command: coverage run -m pytest
+        #   composer_package_name: mosaicml
+        - name: cpu-doctest
           container: mosaicml/pytorch:1.13.1_cpu-python3.10-ubuntu20.04
-          markers: 'not daily and not remote and not gpu and doctest'
-          pytest_command: 'coverage run -m pytest tests/test_docs.py'
-          composer_package_name: 'mosaicml'
+          markers: not daily and not remote and not gpu and doctest
+          pytest_command: coverage run -m pytest tests/test_docs.py
+          composer_package_name: mosaicml
     name: ${{ matrix.name }}
     if: github.repository_owner == 'mosaicml'
     with:
